added open-source in html

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
             </div>
         </div>
     </div>
+
+<p class="open-source">
+    <a href="http://">
+    Open source 
+    </a> 
+    by Chiara Fornetti
+</p>
     <script src="src/index.js"></script>
 </body>
 
