added github link to the website

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
 <p class="open-source">
-    <a href="http://">
+    <a href="https://github.com/cfornetti/Weather_App_Test">
     Open source 
     </a> 
     by Chiara Fornetti
